deploy/k8s/remote-debug-sample/deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: remote-debug-sample
  labels:
    app: k8s-getting-start
spec:
  containers:
    - name: remote-debug-sample-containers
      image: kiwiho/remote-debug-sample:linux-latest
      ports:
        - containerPort: 5000
      imagePullPolicy: Never
