deploy/k8s/remote-debug-sample/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remote-debug-sample-deployment
spec:
  replicas: 3
  template:  
    metadata:
      name: remote-debug-sample
      labels:
        app: remote-debug-sample
    spec:
      containers:
        - name: remote-debug-sample-containers
          image: kiwiho/remote-debug-sample:linux-latest
          ports:
            - containerPort: 80
          imagePullPolicy: Never
  selector:
    matchLabels:
      app: remote-debug-sample
